Fixed small layout bugs

--- a/gui/styles/chart.css
+++ b/gui/styles/chart.css
@@ -1,11 +1,11 @@
 #chart-container {
     display: inline-block;
     width: calc(100vw - 24px);
-    height: calc(100vh * var(--vertical-zoom) - 96px - 24px);
     margin: 8px;
     padding: 4px;
     border-radius: 18px;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.4);
     overflow: hidden;
     transform: translate(0, 0);
+    padding-bottom: 8px;
 }
